# openh

./: .claudeignore  .gitignore  README.md  peek_dataset.py  prompt_yurina.md  pyproject.toml  test_pipeline.py  test_rules.py
docs/: parity_core_audit.md
openh/: __main__.py  agent.py  auto_dream.py  cc_compat.py  command_queue.py  commands.py  compaction.py  config.py  coordinator.py  hooks.py  mcp.py  memdir.py  memory.py  messages.py  output_styles.py  permission_rules.py  persistence.py  pricing.py  prompts.py  session.py  session_memory.py  settings.py  skills.py  system_prompt.py
openh/flet_app/: __main__.py  main.py  permission_dialog.py  settings_dialog.py  theme.py  usage_dialog.py  widgets.py
openh/profiles/: __init__.py  fnd.py
openh/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
openh/tools/: __init__.py  agent_tool.py  ask_user.py  base.py  bash.py  bash_classifier.py  edit.py  glob.py  grep.py  ls.py  memory_tools.py  notebook_edit.py  planmode.py  read.py  send_message.py  serial_tool.py  skill_tool.py  sleep_tool.py  task_tools.py  todowrite.py  tool_search.py  webfetch.py  websearch.py  worktree.py  write.py
